2012-10-02  ruxo  <samrit@proteus-tech.com>
 Instantiate FakeClient every time. Singleton of Fakeclient keeps error state of previous web call which will eventually raise again on the subsequent call no matter if it is success or not.

2012-08-06  jsaytoe  <jsaytoe@proteus-tech.com>
 Added `update` method to mock instances to make writing tests using it simpler.

2012-08-06  Dui Satsana  <dui@proteus-tech.com>
 Added `update` method to proxy base class so all remote objects can update easily.

2012-07-17  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug where GET requests against remote servers using query strings weren't always signed correctly.

2012-06-29  Kirit Saelensminde  <kirit@felspar.com>
 Added a `for_user` decorator to the user agent that can be used to set the user name used for requests to other services.

2012-06-18  Kirit Saelensminde  <kirit@felspar.com>
 Allow us to bypass redirects with the fake HTTP client in the user agent. Useful for testing redirects.

2012-06-14  Kirit Saelensminde  <kirit@felspar.com>
 Added a create member to the mock models on the mock client.
 If the client instance is not given an explicit `pk` member then we will try to build its URL from the `id` member if it has that.
 Fixed a bug where mock instances were not found for some configurations.

2012-06-07  Kirit Saelensminde  <kirit@felspar.com>
 The mock client model method `get` now returns an instance proxy as it should (when it can). If there isn't enough information to build a proper instance URL then it will continue to return the mock instance directly.
 Have had to change the URL scheme for the operation URLs in the mock client from slumber: to http: as Python's urlparse.urljoin won't work otherwise. Have also changed the instance operations to include the primary key (if given).

2012-06-05  Kirit Saelensminde  <kirit@felspar.com>
 Make sure that if a URL is used in a query directly it is properly converted to a Slumber URL as appropriate.
